[metadata]
name = POD-CNF - Andrea Violante
version = 1.0
author = Andrea Violante
author_email = andrea.violante@mail.polimi.it
description = Python implementation of POD-CNF
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Violandree/Conditional-NF/
project_urls =
    Bug Tracker = https://github.com/Violandree/Conditional-NF/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    absl-py==2.4.0
asttokens==3.0.1
colorama==0.4.6
comm==0.2.3
contourpy==1.3.3
cycler==0.12.1
debugpy==1.8.20
decorator==5.2.1
dlroms---Nicola-R-Franco @ git+https://github.com/NicolaRFranco/dlroms.git@c80bc11584e8a9be566cdec45829177ad83f554a
executing==2.2.1
filelock==3.29.0
fonttools==4.62.1
fsspec==2026.3.0
grpcio==1.80.0
ipykernel==7.2.0
ipython==9.13.0
ipython_pygments_lexers==1.1.1
jedi==0.19.2
Jinja2==3.1.6
joblib==1.5.3
jupyter_client==8.8.0
jupyter_core==5.9.1
kiwisolver==1.5.0
Markdown==3.10.2
MarkupSafe==3.0.3
matplotlib==3.10.9
matplotlib-inline==0.2.1
mpmath==1.3.0
nest-asyncio==1.6.0
networkx==3.6.1
nflows==0.14
numpy==2.4.4
packaging==26.2
pandas==3.0.2
parso==0.8.6
pillow==12.2.0
platformdirs==4.9.6
POT==0.9.6.post1
prompt_toolkit==3.0.52
protobuf==7.34.1
psutil==7.2.2
pure_eval==0.2.3
Pygments==2.20.0
pyparsing==3.3.2
python-dateutil==2.9.0.post0
pyzmq==27.1.0
scikit-learn==1.8.0
scipy==1.17.1
seaborn==0.13.2
setuptools==81.0.0
six==1.17.0
stack-data==0.6.3
sympy==1.14.0
tensorboard==2.20.0
tensorboard-data-server==0.7.2
threadpoolctl==3.6.0
torch==2.11.0
torchsummary==1.5.1
torchvision==0.26.0
tornado==6.5.5
tqdm==4.67.3
traitlets==5.14.3
typing_extensions==4.15.0
tzdata==2026.2
wcwidth==0.6.0
Werkzeug==3.1.8

[options.packages.find]
where = src
